tests/Metalama.Framework.Tests.AspectTests/Tests/Aspects/InvalidCode/TemplateInvalidTypeOf.t.cs
[Aspect]
private int Method(int a)
{
  var x1 = global::Metalama.Framework.Tests.PublicPipeline.Aspects.InvalidCode.TemplateInvalidTypeOf.StaticCode.Foo(typeof(global::System.Object));
  var x2 = global::Metalama.Framework.Tests.PublicPipeline.Aspects.InvalidCode.TemplateInvalidTypeOf.StaticCode.Foo(typeof(global::System.Object));
  var x3 = global::Metalama.Framework.Tests.PublicPipeline.Aspects.InvalidCode.TemplateInvalidTypeOf.StaticCode.Foo(typeof(global::System.Object));
  var x4 = global::Metalama.Framework.Tests.PublicPipeline.Aspects.InvalidCode.TemplateInvalidTypeOf.StaticCode.Foo(typeof(global::System.Collections.Concurrent.ConcurrentQueue<global::System.Int32>));
  var x5 = global::Metalama.Framework.Tests.PublicPipeline.Aspects.InvalidCode.TemplateInvalidTypeOf.StaticCode.Foo(typeof(global::System.Collections.Concurrent.ConcurrentQueue<global::System.Int32>));
  var x6 = global::Metalama.Framework.Tests.PublicPipeline.Aspects.InvalidCode.TemplateInvalidTypeOf.StaticCode.Foo(typeof(global::System.Collections.Concurrent.ConcurrentQueue<global::System.Int32>));
  return a;
}